migrate statefulset away from crd

--- a/charts/ollyman/templates/ingress/configmap.yaml
+++ b/charts/ollyman/templates/ingress/configmap.yaml
@@ -50,8 +50,9 @@ data:
         resolver:
           static:
             hostnames:
-              - lb-test-1:4317
-              - lb-test-2:4317
+              - otelcol-ingress.monitoring.svc.cluster.local:4317
+
+
     service:
       pipelines:
         traces:
