--- a/charts/ollyman/templates/process/service.yaml
+++ b/charts/ollyman/templates/process/service.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: otelcol-ingress
+  name: otelcol-process
   namespace: monitoring
 spec:
-  type: LoadBalancer
   selector:
-    app: otelcol-ingress
+    app: otelcol-process
   ports:
   - name: grpc
     port: 4317
