--- a/charts/ollyman/templates/ingress/service.yaml
+++ b/charts/ollyman/templates/ingress/service.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: monitoring
 spec:
   type: LoadBalancer
+  loadBalancerIP: {{.Values.ingress.ip}}
   selector:
     app: otelcol-ingress
   ports:
