--- a/charts/ollyman/templates/ingress/configmap.yaml
+++ b/charts/ollyman/templates/ingress/configmap.yaml
@@ -50,8 +50,8 @@ data:
         log_statements:
           - statements:
             - set(resource.attributes["service.name"], resource.attributes["k8s.container.name"]) where resource.attributes["service.name"] == nil
-            - set(resource.attributes["service.name"], log.attributes["hostname"]) where resource.attributes["service.name"] == nil and log.attributes['hostnames'] != nil
-            - set(resource.attributes["service.name"], 'kube-apiserver') where resource.attributes["service.name"] == nil and log.attributes['k8s.resource.name'] == 'events'
+            - set(resource.attributes["service.name"], log.attributes["hostname"]) where resource.attributes["service.name"] == nil and log.attributes["hostname"] != nil
+            - set(resource.attributes["service.name"], "kube-apiserver") where resource.attributes["service.name"] == nil and log.attributes["k8s.resource.name"] == "events"
             - set(resource.attributes["service.name"], "unknown") where resource.attributes["service.name"] == nil
         trace_statements:
           - statements:
