--- a/charts/ollyman/templates/storage/clickhouse/service.yaml
+++ b/charts/ollyman/templates/storage/clickhouse/service.yaml
@@ -1,13 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: clickhouse
-  namespace: monitoring
+  name: {{ .Values.clickhouse.service.name }}
+  namespace: {{ .Values.namespace }}
 spec:
-  type: LoadBalancer
-  loadBalancerIP: 192.168.1.250
+  type: {{ .Values.clickhouse.service.type }}
+  {{- if eq .Values.clickhouse.service.type "LoadBalancer" }}
+  {{- if .Values.clickhouse.service.loadBalancerIP }}
+  loadBalancerIP: {{ .Values.clickhouse.service.loadBalancerIP }}
+  {{- end }}
+  {{- end }}
   selector:
-    app: clickhouse
+    app: {{ .Values.clickhouse.service.name }}
   ports:
   - name: client
     port: 9000
