add http to ingress otelcol

--- a/charts/ollyman/templates/ingress/service.yaml
+++ b/charts/ollyman/templates/ingress/service.yaml
@@ -12,6 +12,9 @@ spec:
   - name: grpc
     port: 4317
     targetPort: 4317 
+  - name: http
+    port: 4318
+    targetPort: 4318
   - name: zipkin 
     port: 9411
     targetPort: 9411 
