--- a/charts/ollyman/templates/ingress/service.yaml
+++ b/charts/ollyman/templates/ingress/service.yaml
@@ -22,3 +22,7 @@ spec:
     port: 1514
     targetPort: 1514 
     protocol: UDP
+  - name: syslog-pfsense
+    port: 1515
+    targetPort: 1515 
+    protocol: UDP
