--- a/charts/ollyman/templates/process/configmap.yaml
+++ b/charts/ollyman/templates/process/configmap.yaml
@@ -66,6 +66,14 @@ data:
             - set(log.attributes["facility"], Int(log.attributes["priority"]) / 8) where log.attributes["priority"] != nil
             - set(log.body, log.attributes["message"]) where log.attributes["message"] != nil
             - keep_keys(log.attributes, ["process", "priority", "facility", "proc_id"])
+      transform/coredns:
+        log_statements:
+        - conditions:
+            - resource.attributes["service.name"] == "coredns"
+            - IsMap(log.body) and log.body["MESSAGE"] != nil and IsMatch(log.body["MESSAGE"], "^\\[INFO\\]")
+          statements:
+            - set(log.attributes, ExtractPatterns(log.body["MESSAGE"], "(?P<level>\\S+) (?P<client_ip>\\S+):(?P<client_port>\\S+) - (?P<query_id>\\S+) \\\"(?P<type>\\S+) (?P<class>\\S+) (?P<name>\\S+) (?P<proto>\\S+) (?P<request_size>\\S+) (?P<dnssec_ok>\\S+) (?P<bufsize>\\S+)\\\" (?P<rcode>\\S+) (?P<flags>\\S+) (?P<response_size>\\S+) (?P<duration_seconds>[0-9\\.]+)"))
+            - set(log.body, log.body["MESSAGE"])
 
 
     exporters:
@@ -90,7 +98,7 @@ data:
           exporters: [clickhouse]
         logs:
           receivers: [otlp]
-          processors: [transform, transform/pfsense, batch]
+          processors: [transform, transform/pfsense, transform/coredns, batch]
           exporters: [clickhouse]
         metrics:
           receivers: [otlp]
